--- a/Proyecto-Final - HERNAN/CSS/style.css
+++ b/Proyecto-Final - HERNAN/CSS/style.css
@@ -460,6 +460,8 @@ li, ul {
 .nosotros{
     position: relative;
     width: 100%;
+    height: 75%;
+    margin-left: 24px;
     display: flex;
     flex-wrap: wrap;
     background-color: transparent;
@@ -472,11 +474,11 @@ li, ul {
     position: relative;
     width: 300px;
     height: 300px;
+    margin-left: 56px;
     display: inline-block;
     background-color: transparent;
     overflow: hidden;
-    border-radius: 15px;
-    box-shadow: 20px 20px 10px #3282B8;
+    border-radius: 14px;
     transition-property: all;
     transition-duration: 0.5s;
     transition-timing-function: ease-out;
@@ -484,9 +486,9 @@ li, ul {
 
 .fotonosotros{
     position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
+    width: 65%;
+    height: 65%;
+    border-radius: 14px;
 }
 
 .textonosotros{
@@ -494,35 +496,48 @@ li, ul {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 1rem;
     z-index: 1;
-    width: 95%;         
+    width: 100%;   
+    right: 24px; 
 }
 
 #textoCEO{
     position: absolute;
     left: 20px;
-    top: 200px;
+    top: 160px;
+    width: 187px;
+    height: 187px;
+    padding-top: 14px;
+    font-style: italic;
     color: whitesmoke;
+    background-color: #0F4C75
 }
 
 #textoCTO{
     position: absolute;
     left: 20px;
-    top: 220px;
-    font-weight: bold;
-    color: black;
+    top: 160px;
+    width: 187px;
+    height: 187px;
+    padding-top: 14px;
+    font-style: italic;
+    color: whitesmoke;
+    background-color: #0F4C75
 }
 
 #textoAlianza{
     position: absolute;
     left: 20px;
-    top: 200px;
-    color: black;
+    top: 160px;
+    width: 187px;
+    height: 187px;
+    padding-top: 4px;
+    color: whitesmoke;
     font-style: italic;
-    font-weight: bold
+    font-weight: bold;
+    background-color: #0F4C75
 }
 
 .firma{
-    font-style: italic;
     font-weight: bold;
 }
 
