--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,17 +1,16 @@
-                    /* VARIABLES */
+                    /*------VARIABLES--------*/
 
 :root {
     --tamfuen:14px;
     --bgcolsqua: #fcfcfc 
 }
 
-                    /* GENERAL */
+                    /*---------GENERAL-----------*/
 
 * {
     font-size: var(--tamfuen);
     padding: 0;
     margin: 0;
-    /* max-block-size: border-box; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -58,7 +57,7 @@ input {
     border-radius: 12px;
 }
 
-                                    /* HEADER, NAV Y FOOTER*/
+                            /*----------HEADER, NAVBAR Y FOOTER-------*/
 
 header {
     width: 100%;
@@ -93,6 +92,8 @@ nav a:hover {
 }
 
 footer {
+    /* width: 90vw; */
+    /* margin-left: 5vw; */
     font-size: var(--tamfuen);
     margin-top: 1rem;
     padding: 2rem;
@@ -113,7 +114,9 @@ footer a {
     flex-direction: column;
     flex-wrap: wrap;
 }
-
+footer i {
+    font-size: 2rem;
+}
 div a { 
         color: white;
         width: 200px;
@@ -127,9 +130,17 @@ footer a:hover {
 }
 
 .footer-navbar {
-    width: 80%;
+    width: 90vw;
+    margin-left: 5vw;
     display: flex;
-    align-items: center;
+    justify-content: space-around;
+}
+.redes-navbar {
+    width: 90vw;
+    margin-left: 5vw;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .header-navbar {
@@ -144,9 +155,23 @@ footer a:hover {
     font-style: normal;
 }
 
+@media screen and (max-width: 550px) {
+    footer a {  
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: clip;
+    }
+    .footer-navbar {
+        width: 90vw;
+        margin-left: 2vw;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }    
+}
 
-
-.iframe {
+                                /*------MAPAS-------*/
+.mapas {
     display: grid;
     grid-template-columns: repeat (3, 350px);
     padding-bottom: 1rem;
@@ -164,8 +189,11 @@ footer a:hover {
 #gmap-barracas {
     grid-column: 3;
 }
+#copyright {
+    margin-top: 20px;
+}
 @media screen and (max-width: 950px) {
-    .iframe {
+    .mapas {
         display: grid;
         grid-template-columns: 350px;
         grid-row: repeat (3,auto);
@@ -175,21 +203,28 @@ footer a:hover {
     #gmap-jardin {
         grid-column: 1;
         grid-row: 1;
-        margin-left: 28px;
+        margin-left: 30px;
     }
     
     #gmap-caballito {
-        grid-column: 2;
-        grid-row: 1;
+        grid-column: 1;
+        grid-row: 2;
+        margin-left: 30px;
     }
     
     #gmap-barracas {
         grid-column: 1;
-        grid-row: 2;
+        grid-row: 3;
+        margin-left: 30px;
     }
 }
+@media screen and (max-width: 350px) {
+    #gmap-jardin, #gmap-caballito, #gmap-barracas {
+        margin-left: 10px;
+    }    
+}
 
-                                    /* HAMBURGUER MENU */
+                        /*---------HAMBURGUER MENU----------*/
 
 #menu, #menu-check{
     display: none;
@@ -262,7 +297,7 @@ footer a:hover {
     }
 }
 
-                                    /* TEXTOS */
+                        /*-------TEXTOS---------*/
 
 h2 { 
     width: 100%;
@@ -289,7 +324,7 @@ p {
     padding-left: 12px;
 }
 
-                                    /* SECCION: PRESENTACION - CARROUSEL */
+                        /*--------CARROUSEL--------*/
 
   *::-webkit-scrollbar {
     width: 0;
@@ -320,10 +355,10 @@ li, ul {
 }
 .carousel {
     position: relative;
-    padding-top: 75%;
+    padding-top: 80%;
     padding-left: 5%;
     padding-right: 5%;
-    /* background-color: #0F4C75; */
+    
 }
 .carousel__viewport {
     position: absolute;
@@ -363,15 +398,21 @@ li, ul {
     left: 25%;
     width: 60vw;
     border-radius: 15px;
-    /* height: 25vh; */
-    z-index: 1;
-    color: #BBE1FA;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 3rem;
-    /* text-align: center; */
-    /* transform: rotate(-15deg); */
-    /* align-content: center; */
     background-color: rgba(0,0,0,0.5);
+}
+
+@media (hover: hover) { 
+    .carousel__visor {
+    animation-name: desplazar, enfocar;
+    animation-timing-function: ease-in-out;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    }
+    .carousel__diapo:last-child .carousel__visor {
+    animation-name: recomenzar, enfocar;
+    animation-timing-function: ease-in-out;
+    animation-duration: 3s;
+    }
 }
 
 /* Animacion para transicion a la siguiente foto de forma mas gradual, "empuja el borde izq" */
@@ -488,14 +529,54 @@ li, ul {
     pointer-events: none;
 }
 
-                                    /* SECCION: NOSOTROS */
+@media screen and (max-width: 800px) {
+    .textosobrefoto{
+    font-size: 2rem;
+    }
+}
+@media screen and (max-width: 549px) {
+    .carousel__botonera{
+    top: 17.5rem;
+    }
+    .carousel::before, .carousel::after {
+    font-size: 2rem;
+    margin-top: 25%;
+    }
+}
+@media screen and (max-width: 450px) {
+    .textosobrefoto{
+    font-size: 1rem;
+    }
+    .carousel__botonera{
+        top: 25rem;
+        }
+    .carousel{
+        padding-top: 100%;
+    }
+}
+@media screen and (max-width: 400px) {
+    .carousel__botonera{
+    top: 23rem;
+    }
+    .carousel {
+        padding-top: 110%;
+    }
+}
+@media screen and (max-width: 350px) {
+    .carousel__botonera{
+    top: 21rem;
+    }
+    .carousel {
+        padding-top: 115%;
+    }
+}
+
+                    /*--------NOSOTROS-----------*/
 
 
 .nosotros{
     position: relative;
     width: 100%;
-    /* height: 75%; */
-    /* margin-left: 24px; */
     display: flex;
     flex-wrap: wrap;
     background-color: transparent;
@@ -508,12 +589,11 @@ li, ul {
     position: relative;
     width: 300px;
     height: 300px;
-    /* margin-left: 56px; */
     display: inline-block;
     background-color: transparent;
     overflow: hidden;
     border-radius: 15px;
-    box-shadow: 20px 20px 10px #3282B8;
+    box-shadow: 20px 20px #3282B8;
     transition-property: all;
     transition-duration: 0.5s;
     transition-timing-function: ease-out;
@@ -532,7 +612,6 @@ li, ul {
     font-size: 1rem;
     z-index: 1;
     width: 100%;   
-    /* right: 24px;  */
     color: white;
 }
 
@@ -568,55 +647,46 @@ li, ul {
     box-shadow: none;
 }
 
+@media screen and (max-width: 500px) {
+    .nosotros {
+        flex-direction: column;
+    }
+    .ventananosotros {
+        border-radius: 0;
+        box-shadow: none;
+    }
+    .fotonosotros{
+        border-radius: 0;
+    }
+}
 
-                                    /* SECCION: COMPUTADORAS */
+                    /*-----------EQUIPOS------------*/
 
 .grid-equipos{
-    /* position: relative; */
     width: 90vw;
     margin-left: 5vw;
-    /* height: 90vh; */
-    /* justify-self: center; */
     justify-content:space-around;
     align-content: space-around;
     display: grid;
-    grid-template-columns: repeat(2, 47.5%); /*550px*/
-    /* column-gap:3%; */
+    grid-template-columns: repeat(2, 47.5%);
     row-gap: 3%;
-
 }     
 
 .equipos {
     display: grid;
-    grid-template-columns: 34% 66%; /*250px 250px*/
-    /* font-size: var(--tamfuen); */
-    /* margin: 0 40px 1rem 40px;   */
-    /* width: 530px; */
-    /* height: 250px; */
-    /* padding-top: 0; */
-    /* padding-bottom: 35px; */
+    grid-template-columns: 34% 66%; 
     border-radius: 15px;
     border: 4px solid white;
-    /* background-color: var(--bgcolsqua); */
     background-color: white;
-    /* color: black; */
-    
 }
 
 .equipos:hover {
     border: 4px solid aqua;
 }
 
-/* .equipos.izquierda, .equipos.derecha {
-    margin: 12px 0 12px 78px;
-} */
-
-
-
 label.grid-col-equipos {
     grid-column: 1 /3;
     display: grid;
-    /* grid-template-columns: repeat(2, 20vw); */
 }
 
 ul.opventa {
@@ -643,13 +713,13 @@ img#PC-Oficina {
 }
 
 img#PC-Gamer {
-    width: 200px; /*200*/
+    width: 200px;
     margin: 12px 0 0 12px;
     grid-column: 1;
 }
 
 img#PC-Diseño {
-    width: 165px; /*165*/
+    width: 165px;
     margin: 12px 0 0 12px;
     grid-column: 1;
 }
@@ -660,25 +730,17 @@ img#PC-Diseño {
     grid-row: 2;
     grid-column: 1 / 3;
 }
-/* 
-#oficina,#multimedia {
-    width: 100vh;
-    height: 4vh;
-} */
 
 @media screen and (max-width: 900px) {
     .grid-equipos{
         width: 90vw;
-        margin-top: 10px;
-        /* height: 90vh; */
-        /* justify-content:center; */
-        /* align-content: center; */
+        margin-top: 30px;
         display: grid;
         grid-template-columns: 100%; 
         justify-self: center;
         row-gap: 1%;
     }
-
+}
 @media screen and (max-width: 375px) {
     img#PC-Estandar {
         display: none;
@@ -696,16 +758,14 @@ img#PC-Diseño {
         grid-column: 1 /3;
         padding-left: 10px;
     }
-
 }    
-    
-}
-                                    /* SECCION: UPGRADES */
+
+                    /*--------UPGRADES-----------*/
 
 .grid-upgrade{
     display: grid;
     grid-template-rows: repeat(4, 105px);
-    grid-template-columns: 230px auto;/*auto 100vh 100vh;*/
+    grid-template-columns: 230px auto;
     width: 90vw;
     border: none;
     row-gap: 8px;
@@ -733,11 +793,9 @@ img#PC-Diseño {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content:space-around;
-    /*gap: 36px;*/ /* Reemplazar esto por algo que centre las cosas */
 }
 
 #micros, #ram, #storage, #video {
-    /* padding-left: 36px; */
     grid-column: 2 / 3;
     grid-row: 1 / 4;
 }
@@ -892,9 +950,27 @@ img#PC-Diseño {
         background-color: var(--bgcolsqua);
         color: black;
     }
-        
-}
-                                    /* SECCION: ACCESORIOS */
+}    
+    @media screen and (max-width: 420px) {
+        .grid-upgrade {
+            grid-template-columns: 200px auto;
+            margin-left: 2vw;
+        }
+        #btn-micro, #btn-ram, #btn-storage, #btn-video {
+            width: 200px;
+        }
+    }
+    @media screen and (max-width: 350px) {
+        .grid-upgrade {
+            grid-template-columns: 150px auto;
+            margin-left: 1vw;
+        }
+        #btn-micro, #btn-ram, #btn-storage, #btn-video {
+            width: 150px;
+        }
+    }
+
+                /*---------ACCESORIOS-----------*/
 
 .grid-accesorios{
     display: grid;
@@ -917,13 +993,9 @@ img#PC-Diseño {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    /* gap: 8px; */
-    /* margin-bottom: 12px; */
-    /* padding-left: 40px; */
 } 
 
 .Tecladogamer, .Microfono, .Auriculares, .Mouse {
-    /* grid-row: 1; */
     width: 250px;
     height: 250px;
     border-radius: 24px;
@@ -936,7 +1008,6 @@ img#PC-Diseño {
 }
 
 .Monitor, .Gabinete, .Soporte, .Cable {
-    /* grid-row: 2; */
     width: 250px;
     height: 250px;
     border-radius: 24px;
@@ -968,18 +1039,8 @@ img#PC-Diseño {
     width: 90px;
     height: 100px;
 }
-/* @media screen and (max-width: 1120px) {
-    .grid-accesorios{
-        display: grid;
-        grid-template-columns: auto auto;
-        width: 90vw;
-        border: none;
-        row-gap: 8px;
-        margin-left: 5vw; 
-    } 
-} */
 
-                                    /* FORMULARIO CONTACTO */
+                    /*-------FORMULARIO CONTACTO---------*/
 
 .formulario_contacto {
     display: grid;
@@ -1026,7 +1087,6 @@ textarea {
     width: 90%;
     height: 150px;
     border: 1px solid black;
-    /* font-size: var(--tamfuen); */
     margin-top: 25px;
     margin-left: 15px;
     padding-left: 5px;
@@ -1042,14 +1102,11 @@ textarea {
     width: 90%;
 }
 #horario, #contacto, #tipoconsulta {
-    /* grid-column : 1; */
-    /* columns: 1; */
     margin-top: 8px;
 }
 
 .detalle {
     background-color: var(--bgcolsqua);
-    /* margin-left: 64px; */
     width: 45vw;
     height: 500px;
     border-radius: 15px;
@@ -1060,13 +1117,8 @@ textarea {
 }
 
 #detalle {
-    /* display: grid; */
-    /* grid-template-columns: 500px; */
-    /* width: 500px; */
     height: 10px;
-    /* grid-template-columns: 2; */
     padding-bottom: 4px;
-    /* grid-column: 2; */
 }
 
 #compra {
@@ -1099,13 +1151,10 @@ textarea {
         grid-template-columns: auto;
         grid-template-rows: repeat(2, auto);
         font-size: var(--Lifuen);
-        /* margin-left: 5vw; */
-        /* margin-top: 24px; */
         width: 90vw;
     }
     .detalle {
         background-color: var(--bgcolsqua);
-        /* margin-left: 5vw; */
         width: 90vw;
         height: 500px;
         border-radius: 15px;
@@ -1119,7 +1168,6 @@ textarea {
         display: flex;
         flex-direction: column;
         width: 90vw;
-        /* margin-left: 5vw; */
         margin-top: 20px;
         margin-bottom: 12px;
         grid-row: 2;
@@ -1136,7 +1184,7 @@ textarea {
     }        
 }
 
-                                    /* BOTONES */
+                /*---------BOTONES------------*/
 
 .btns {
     display: flex;
@@ -1168,7 +1216,7 @@ textarea {
     margin: 0 16px 16px 0;
 }
 
-/* COLORES */
+                /*-----COLORES--------*/
 
 body {
     color:#F0ECE2 ;
@@ -1188,65 +1236,4 @@ h2:not(.textosobrefoto) {
     border-bottom: 2px solid white;
 }
 
-                                                                        /* RESPONSIVE */
-
-                                    /* CARROUSELL */
-
-@media screen and (max-width: 800px) {
-    .textosobrefoto{
-    font-size: 2rem;
-    }
-}
-@media screen and (max-width: 549px) {
-    .carousel__botonera{
-    top: 17.5rem;
-    }
-    .carousel::before, .carousel::after {
-    font-size: 2rem;
-    margin-top: 25%;
-    }
-}
-@media screen and (max-width: 450px) {
-    .textosobrefoto{
-    font-size: 1rem;
-    }
-}
-@media screen and (max-width: 400px) {
-    .carousel__botonera{
-    top: 15rem;
-    }
-}
-@media screen and (max-width: 350px) {
-    .carousel__botonera{
-    top: 12.5rem;
-    }
-}
-@media (hover: hover) { 
-    .carousel__visor {
-    animation-name: desplazar, enfocar;
-    animation-timing-function: ease-in-out;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    }
-    .carousel__diapo:last-child .carousel__visor {
-    animation-name: recomenzar, enfocar;
-    animation-timing-function: ease-in-out;
-    animation-duration: 3s;
-    }
-}
-
-                                    /* NOSOTROS */
-
-@media screen and (max-width: 500px) {
-    .nosotros {
-        flex-direction: column;
-    }
-    .ventananosotros {
-        border-radius: 0;
-        box-shadow: none;
-    }
-    .fotonosotros{
-        border-radius: 0;
-    }
-}
 
